2012-07-14 Pierrick Caillon <pierrick.caillon+zipdirfs@megami.fr>
	* Bug fix: Remove method on NameSearchTree could remove the wrong item.

2012-07-04 Pierrick Caillon <pierrick.caillon+zipdirfs@megami.Fr>
	* Feature: The content of the files in the exposed Zip files can be read.
	* Fix: Memory leak in ZipRootFactory. The ZipFile instance was not freed by the containing object.

2012-07-03 Pierrick Caillon <pierrick.caillon+zipdirfs@megami.fr>
	* Feature: All zip representation classes created. Files cannot be read.
	* Refactor: Put all classes in zipdirfs namespace.
	* Feature: When building the root zip folder listing, the system automatically traverse any only one directory levels. For example, if we have a/b/c and a/b/d, instead of showing folder a, it will show the two files c and d.

2012-07-01 Pierrick Caillon <pierrick.caillon+zipdirfs@megami.fr>
	* Feature: List the entries in a regular folder. The entries are identified as symlink, zipfile or folder.
	* Feature: stat reponse provides the underlying folder modification time.
	* Feature: Permission model for each node type.
	* Feature: Copy the fusermount behaviour when invalid parameters are encountered.
	* Feature: Adds own usage information around the fuse one.
	* Bug fix: NameSearchTree lookup was doing infinite loop.
	* Fix: removed "." and ".." from generated directory listing.
	* Comment: Use a patched version of fusekit (see: http://code.google.com/p/fusekit/issues/detail?id=1) for symlink support.
	* Feature: Zip files are presented as folder. Without any content.
	* Feature: Prepared zip file wrapper, its iterator and file entry wrapper.

2012-06-30 Pierrick Caillon <pierrick.caillon+zipdirfs@megami.fr>
	* Initial import
	* Feature: Index tree to speed up directory entry lookup